syntax = "proto3";

package codenet.codenet;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "codenet/codenet/params.proto";
import "codenet/codenet/encoded_data.proto";

option go_package = "codenet/x/codenet/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/codenet/codenet/params";
  
  }
  
  // Queries a list of GetEncodedDataById items.
  rpc GetEncodedDataById (QueryGetEncodedDataByIdRequest) returns (QueryGetEncodedDataByIdResponse) {
    option (google.api.http).get = "/codenet/codenet/get_encoded_data_by_id/{encodedDataId}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetEncodedDataByIdRequest {
  uint64 encodedDataId = 1;
}

message QueryGetEncodedDataByIdResponse {
  EncodedData encodedData = 1;
}

